WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303325
REGRESSION(
303533@main
): Caused webrtc/vp9-profile2.html to time out
https://bugs.webkit.org/show_bug.cgi?id=303325
Summary
REGRESSION(303533@main): Caused webrtc/vp9-profile2.html to time out
Jonathan Bedard
Reported
2025-12-01 10:20:54 PST
History:
https://results.webkit.org/?suite=layout-tests&test=webrtc%2Fvp9-profile2.html
Example:
https://build.webkit.org/#/builders/1716/builds/543
Reproduction: run-webkit-tests --no-build --no-retry --no-show-results --exit-after-n-failures=1 --expect-pass --release webrtc/vp9-profile2.html Confirmed on Tahoe, although possibly failing before this point on the configuration tested.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-01 10:21:11 PST
<
rdar://problem/165628091
>
Jonathan Bedard
Comment 2
2025-12-01 10:33:12 PST
Looks to cause crashes in `fast/mediastream/captureStream/canvas3d.html` too:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fmediastream%2FcaptureStream%2Fcanvas3d.html
EWS
Comment 3
2025-12-01 11:45:47 PST
Test gardening commit
303692@main
(6f8b0b8ea3dd): <
https://commits.webkit.org/303692@main
> Reviewed commits have been landed. Closing PR #54647 and removing active labels.
Kimmo Kinnunen
Comment 4
2025-12-02 08:59:36 PST
Investigating.
Kimmo Kinnunen
Comment 5
2025-12-04 12:01:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54859
EWS
Comment 6
2025-12-04 22:43:04 PST
Committed
303966@main
(a2e4e97e1a95): <
https://commits.webkit.org/303966@main
> Reviewed commits have been landed. Closing PR #54859 and removing active labels.
Jonathan Bedard
Comment 7
2025-12-11 16:46:06 PST
This didn't fix
https://results.webkit.org/?suite=layout-tests&test=webrtc/vp9-profile2.html
Kimmo Kinnunen
Comment 8
2025-12-17 00:42:26 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/55545
EWS
Comment 9
2025-12-17 05:46:35 PST
Committed
304584@main
(96976b9fef46): <
https://commits.webkit.org/304584@main
> Reviewed commits have been landed. Closing PR #55545 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug