REGRESSION(303533@main): Caused webrtc/vp9-profile2.html to time out https://bugs.webkit.org/show_bug.cgi?id=303325 rdar://165628091

Reviewed by Youenn Fablet.

Revert a use of VideoFrame::copyNativeImage() that was added in
303533@main. The intention was that this general purpose
operation would be able to complete on local data for VideoFrameCV,
VideoFrameLibWebRTC and use GPUP data for RemoteVideoFrameProxy.
However, VideoFrameLibWebRTC / VideoFrameCV cannot yet convert
a pixel buffer to a BGRA32 pixel buffer due to the conversion using
PixelBufferConformerCV, which uses VTPixelBufferConformer.
VTPixelBufferConformer uses pixel buffer pools that create IOSurfaces.

Revert to the previous implementation: explicitly send the local data
to GPUP, run the conversion there and then transfer it back.

Later commits will improve this.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/WebProcess/GPU/media/RemoteMediaPlayerManager.cpp:
(WebKit::RemoteMediaPlayerManager::setUseGPUProcess):
* Source/WebKit/WebProcess/GPU/webrtc/RemoteVideoFrameObjectHeapProxyProcessor.cpp:
(WebKit::RemoteVideoFrameObjectHeapProxyProcessor::getVideoFrameBuffer):

Canonical link: https://commits.webkit.org/303966@main